# ccihs

./: Cargo.toml  README.md  architecture_1.txt  architecture_2.txt
src/: constants.rs  lib.rs
src/api/: ccihs_api.rs  endpoints.rs  error.rs  mod.rs
src/config/: ccihs_config.rs  chain_config.rs  mod.rs  protocol_config.rs  transport_config.rs
src/core/: chain_management.rs  error.rs  mod.rs  operation.rs
src/hook/: hook_manager.rs  mod.rs  post_dispatch.rs  post_execution.rs  pre_dispatch.rs  pre_execution.rs
src/hooks/: encryption.rs  fee_calculation.rs  hook_manager.rs  logging.rs  metrics.rs  mod.rs  rate_limiting.rs  validation.rs
src/protocol/: mod.rs  wormhole.rs
src/protocols/: mod.rs  wormhole.rs
src/protocols/wormhole/: adapter.rs  config.rs  error.rs  instructions.rs  message.rs  mod.rs  state.rs
src/protocols/wormhole/instructions/: initialize.rs  mod.rs  receive_message.rs  redeem_native_tokens_with_payload.rs  redeem_native_transfer_with_payload.rs  redeem_wrapped_tokens_with_payload.rs  redeem_wrapped_transfer_with_payload.rs  register_emitter.rs  register_foreign_token_emitter.rs  send_message.rs  send_native_tokens_with_payload.rs  send_wrapped_tokens_with_payload.rs  transfer_token.rs  update_relayer_fee.rs
src/protocols/wormhole/state/: foreign_emitter.rs  mod.rs  (+5 more)
src/state/: anchor.rs  common.rs  mod.rs  native.rs
src/types/: address.rs  chain.rs  config.rs  crosschain_fee.rs  hook.rs  message.rs  mod.rs  nonce.rs  protocol.rs  result.rs
src/utility/: error.rs  mod.rs
src/utility/serialization/: anchor.rs  mod.rs  native.rs
