[package]
name = "ccihs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
anchor = ["dep:anchor-lang"]

[dependencies]
anchor-lang = { version = "0.28.0", optional = true }
solana-program = "1.16"
ethereum-types = "0.14.1"
#solana-program = "1.14"
borsh = "0.10.0"
#borsh = "0.9.3"
thiserror = "1.0"
