[package]
name = "ccihs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["anchor"]
anchor = ["dep:anchor-lang"]
native = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.28.0", optional = true }
solana-program = "1.16"
ethereum-types = "0.14.1"
wormhole-sdk = "0.0.7"
#solana-program = "1.14"
borsh = "0.10.0"
#borsh = "0.9.3"
thiserror = "1.0"
wormhole-token-bridge-solana = "0.0.1-alpha.4"
wormhole-core-bridge-solana = "0.0.1-alpha.5"
 